--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -1,7 +1,9 @@
-FROM public.ecr.aws/lambda/python:3.8
+FROM public.ecr.aws/lambda/python:3.9
 
 COPY app.py requirements.txt ./
 
-RUN python3.8 -m pip install -r requirements.txt -t .
+RUN python3.9 -m pip install -r requirements.txt -t .
+
+#EXPORT DOCKER_DEFAULT_PLATFORM=linux/amd64
 
 CMD ["app.lambda_handler"]
