--- a/template.yaml
+++ b/template.yaml
@@ -4,12 +4,8 @@ Transform: AWS::Serverless-2016-10-31
 Globals:
   Function:
     Timeout: 50
-    MemorySize: 50000
+    MemorySize: 256
   Api:
-    BinaryMediaTypes:
-      - image/png
-      - image/jpg
-      - image/jpeg
     Cors:
       AllowMethods: "'GET,POST,OPTIONS'"
       AllowHeaders: "'content-type'"
@@ -17,12 +13,11 @@ Globals:
       AllowCredentials: "'*'"
 
 Resources:
-  InferenceFunction:
+  ForecastFunction:
     Type: AWS::Serverless::Function # More info about Function Resource: https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#awsserverlessfunction
     Properties:
       CodeUri: app/
-      Handler: app.lambda_handler
-      Runtime: python3.9
+      PackageType: Image
       Architectures:
         - arm64
       Events:
@@ -32,18 +27,22 @@ Resources:
             #Path: /predict
             Path: "/{proxy+}"
             Method: any
+    Metadata:
+      Dockerfile: Dockerfile
+      DockerContext: ./app
+      DockerTag: python3.9-v1
 
 
 Outputs:
   # ServerlessRestApi is an implicit API created out of Events key under Serverless::Function
   # Find out more about other implicit resources you can reference within SAM
   # https://github.com/awslabs/serverless-application-model/blob/master/docs/internals/generated_resources.rst#api
-  InferenceApi:
-    Description: "API Gateway endpoint URL for Prod stage for Inference function"
+  ForecastApi:
+    Description: "API Gateway endpoint URL for Prod stage for Forecast function"
     Value: !Sub "https://${ServerlessRestApi}.execute-api.${AWS::Region}.amazonaws.com/Prod/predict/"
-  InferenceFunction:
-    Description: "Inference Lambda Function ARN"
-    Value: !GetAtt InferenceFunction.Arn
-  InferenceFunctionIamRole:
-    Description: "Implicit IAM Role created for Inference function"
-    Value: !GetAtt InferenceFunctionRole.Arn
+  ForecastFunction:
+    Description: "Forecast Lambda Function ARN"
+    Value: !GetAtt ForecastFunction.Arn
+  ForecastFunctionIamRole:
+    Description: "Implicit IAM Role created for Forecast function"
+    Value: !GetAtt ForecastFunctionRole.Arn
